deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-springboot
  labels:
    app: spring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
      - name: demo-springboot
        image: 262213740647.dkr.ecr.ap-northeast-2.amazonaws.com/k5s_ecr:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
