test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  labels:
    app:  nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  nginx
  template:
    metadata:
      labels:
        app:  nginx
        environment:  develop
        release:  beta
    spec:
      containers:
      - name: nginx
        image:  nginx
        ports:
        - containerPort:  80
