service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: demo-springboot
  labels:
    app: spring
spec:
  type: NodePort
  selector:
    app: spring
  ports:
    - protocol : TCP
      port : 80
      targetPort : 8080
