test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
    environment: develop
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
