ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress # 인그레스 이름 정하기
  namespace: default    # 설치할 네임스페이스
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: demo-springboot # 연결할 서비스 (이부분은 고정)
              port:
                number: 80  # (이부분도 고정)
